2007-07-18	David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/demo/PieChartDemo1.java
	(createChart): Modified settings,
	* source/org/jfree/chart/plot/PiePlot.java
	(DEFAULT_INTERIOR_GAP): Modified default,
	(DEFAULT_LABEL_SHADOW_PAINT): Likewise,
	(simpleLabels): New field,
	(labelPadding): Likewise,
	(simpleLabelOffset): Likewise,
	(PiePlot(PieDataset)): Initialise new fields,
	(getLabelPadding): New method,
	(setLabelPadding): Likewise,
	(getSimpleLabels): Likewise,
	(setSimpleLabels): Likewise,
	(getSimpleLabelOffset): Likewise,
	(setSimpleLabelOffset): Likewise,
	(drawPie): Added simple label handling,
	(drawSimpleLabels): New method,
	(drawLabels): Reformatting,
	(drawLeftLabels): Set label padding,
	(drawRightLabels): Likewise,
	(equals): Updated for new fields,
	* source/org/jfree/chart/plot/PiePlot3D.java
	(draw): Updated for simple labels.

2007-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CombinedRangeXYPlot.java
	(remove): Actually remove the subplot.

2007-07-16  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(getComposite): Implemented,
	(setComposite): Likewise.

2007-07-12  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/axis/LogAxis.java
	(setSmallestValue): Added event notification,
	(zoomRange): New method override.

2007-07-12  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): improved mouse event conversion.

2007-07-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/CyclicNumberAxis.java
	(drawTickMarksAndLabels): Added PlotRenderingInfo parameter,
	* source/org/jfree/chart/axis/DateAxis.java
	(draw): Updated for change to drawTickMarksAndLabels() signature,
	* source/org/jfree/chart/axis/NumberAxis.java
	(draw): Likewise,