@@ -1,3 +1,8 @@
+2007-07-25  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
+
+	* source/swt/org/jfree/experimental/chart/swt/ChartComposite.java
+	pass mouse mouved events to listening ChartMouseListeners.
+
 2007-07-18	David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/demo/PieChartDemo1.java
